
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "analysis",
    "cli",
    "core",
    "daemon",
    "mecomp-workspace-hack",
    "mpris",
    "one-or-many",
    "storage",
    "surrealqlx/lib",
    "surrealqlx/macros",
    "surrealqlx/macros-impl",
    "tui",
]
exclude = ["external", "target", "assets", "scripts"]
resolver = "2"

[workspace.package]
version = "0.5.8"
edition = "2024"
authors = [
    "Anthony Rubick <68485672+AnthonyMichaelTDM@users.noreply.github.com>",
]
description = "A Metadata Enhanced Collection Orientated Music Player"
repository = "https://github.com/AnthonyMichaelTDM/mecomp"
keywords = ["music", "player", "audio", "mecomp", "analysis"]
categories = ["multimedia"]
readme = "README.md"
license = "MIT"

[workspace.metadata.cargo-machete]
ignored = ["mecomp-workspace-hack"]


[profile.release]
# debug = true      # for profiling
lto = true
strip = "none"
codegen-units = 1
opt-level = 3

[profile.dev]
lto = false
strip = "none"
opt-level = 0

# [profile.dev.build-override]
# opt-level = 3

[profile.test]
lto = false
strip = "none"
opt-level = 1

[profile.bench]
debug = true

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
# Set math libraries to optimize for speed in tests
linfa.opt-level = 3
linfa-linalg.opt-level = 3
linfa-reduction.opt-level = 3
linfa-clustering.opt-level = 3
linfa-tsne.opt-level = 3
linfa-nn.opt-level = 3
ndarray.opt-level = 3
ndarray-rand.opt-level = 3
ndarray-stats.opt-level = 3
statrs.opt-level = 3
rustfft.opt-level = 3
# Set audio libraries to optimize for speed in tests
symphonia.opt-level = 3
rodio.opt-level = 3

[profile.tarpaulin]
inherits = "test"
opt-level = 0

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[workspace.dependencies]
# shared dependencies
anyhow = { version = "1.0.100", default-features = false }
lofty = { version = "0.22.3" }
clap = { version = "4.5.50", default-features = false, features = [
    "color",
    "error-context",
    "help",
    "std",
    "usage",
    "suggestions",
    "derive",
] }
clap_complete = { version = "4.5.59", features = ["unstable-dynamic"] }
ciborium = { version = "0.2.2" }
config = { version = "0.15.17", default-features = false, features = ["toml"] }
console-subscriber = { version = "0.4.1" }
csv = "1.4.0"
directories = "6.0.0"
env_logger = { version = "0.11.8", features = [
    "color",
], default-features = false }
futures = { version = "0.3.31", features = ["alloc"], default-features = false }
# image = { version = "0.25.0" }
log = { version = "0.4.28", features = ["serde"] }
mpris-server = "0.9.0"
notify-debouncer-full = { version = "0.6.0", default-features = false }
notify = { version = "8.2.0", default-features = false, features = [
    "macos_fsevent",
] }
object-pool = "0.6.0"
once_cell = "1.21.3"
percent-encoding = { version = "2.3.2", default-features = false }
rand = { version = "0.8.5", features = ["small_rng"] }
rodio = { version = "0.21.1", features = ["symphonia-all"] }
symphonia = { version = "0.5.5", default-features = false, features = [
    # features for .wav
    "wav",
    "pcm",
    "adpcm",
    # features for .flac
    "flac",
    # for mp3 
    "mp3",
    # for ogg
    "ogg",
    "vorbis",
    # enable simd 
    "opt-simd",
] }
rubato = { version = "0.16.2" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145" }
shellexpand = "3.1.1"
strum = { version = "0.26.3", features = ["derive"] }
surrealdb = { version = "=2.3.10", features = [
    # "allocator",
    "kv-mem",
    "kv-surrealkv",
], default-features = false }
tap = { version = "1.0.1" }
thiserror = { version = "2.0.17" }
tokio = { version = "1.48.0", features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "time",
] }
walkdir = { version = "2.5.0" }
tarpc = { version = "0.37.0", features = [
    "serde-transport",
    "serde-transport-json",
    "tcp",
] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing-opentelemetry = "0.31.0"
opentelemetry = "0.30.0"
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic"] }
tracing-flame = "0.2.0"

# MECOMP packages
mecomp-analysis = { path = "analysis", version = "=0.5.8" }
mecomp-core = { path = "core", default-features = false, version = "=0.5.8" }
mecomp-daemon = { path = "daemon", version = "=0.5.8" }
mecomp-storage = { path = "storage", default-features = false, version = "=0.5.8" }
surrealqlx = { path = "surrealqlx/lib", version = "=0.1.6" }
surrealqlx-macros = { path = "surrealqlx/macros", version = "=0.1.6" }
surrealqlx-macros-impl = { path = "surrealqlx/macros-impl", version = "=0.1.6" }
one-or-many = { path = "one-or-many", version = "=0.4.1", default-features = false }

# shared dev dependencies
pretty_assertions = "1.4.1"
rstest = "0.26.1"
rstest_reuse = { version = "0.7.0" }
tempfile = { version = "3.23.0" }
criterion = { version = "0.7.0", features = ["html_reports"] }

# [lints.rust]
# warnings = "deny"

# [lints.clippy]
# all = "deny"
# pedantic = "deny"
# nursery = "deny"
# perf = "deny"
# cargo = "deny"
