[package]
name = "mecomp-analysis"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "A library for creating feature vectors from audio files."
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
license.workspace = true

[features]
default = []
# plot_gap = ["dep:plotters"]

[dependencies]
bliss-audio-aubio-rs = { version = "0.2.2", features = ["static"] }
linfa = "0.7.0"
linfa-clustering = "0.7.0"
linfa-tsne = "0.7.0"
linfa-nn = "0.7.0"
log = { workspace = true }
ndarray = { version = "0.15.6", features = ["rayon"] }
ndarray-rand = "0.14.0"
ndarray-stats = { version = "0.5.1" }
noisy_float = { version = "0.2.0" }
object-pool = { workspace = true }
# plotters = { version = "0.3.0", optional = true }
rand.workspace = true
rayon = "1.10"
rubato = { workspace = true }
symphonia = { workspace = true }
rustfft = { version = "6.2" }
serde = { workspace = true }
statrs = "0.18.0"
strum.workspace = true
thiserror = { workspace = true }
mecomp-workspace-hack = { version = "0.1", path = "../mecomp-workspace-hack" }

# if we're building on macos, we need to link against the system's fftw3
# library, which is not available on linux
[target.'cfg(target_os = "macos")'.dependencies]
bliss-audio-aubio-rs = { version = "0.2.2", features = ["static", "bindgen"] }

[dev-dependencies]
ndarray-npy = { version = "0.8", default-features = false }
adler32 = "1.2"
pretty_assertions = { workspace = true }
rstest = { workspace = true }
criterion = { workspace = true }

[lib]
bench = false

[[bench]]
name = "analysis"
harness = false

[[bench]]
name = "chroma"
harness = false

[[bench]]
name = "decoder"
harness = false

[[bench]]
name = "decoder_steps"
harness = false

[[bench]]
name = "descriptors"
harness = false

[[bench]]
name = "utils"
harness = false
