[package]
name = "mecomp-analysis"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "A library for creating feature vectors from audio files."
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
license.workspace = true
exclude = ["data/"]

[features]
default = ["model"]
# plot_gap = ["dep:plotters"]
model = ["ort"]
ort = ["dep:ort"]

[dependencies]
bliss-audio-aubio-rs = { version = "0.2.4", features = ["static"] }
linfa = "0.8.0"
linfa-clustering = "0.8.0"
linfa-reduction = "0.8.0"
linfa-tsne = "0.8.0"
linfa-nn = "0.8.0"
log = { workspace = true }
ndarray = "0.16.1"
ndarray-rand = "0.15.0"
ndarray-stats = { version = "0.6.0" }
noisy_float = { version = "0.2.0" }
object-pool = { workspace = true }
# plotters = { version = "0.3.0", optional = true }
rand.workspace = true
rayon = "1.11.0"
rubato = { workspace = true }
symphonia = { workspace = true }
rustfft = { version = "6.4.1" }
serde = { workspace = true }
statrs = { version = "0.18.0", default-features = false }
strum.workspace = true
thiserror = { workspace = true }
likely_stable.workspace = true
bitvec.workspace = true
mecomp-workspace-hack = { version = "0.1", path = "../mecomp-workspace-hack" }
ort = { version = "2.0.0-rc.10", features = ["copy-dylibs", "download-binaries", "std", "tracing", "webgpu"], optional = true, default-features = false }

# if we're building on macos, we need to link against the system's fftw3
# library, which is not available on linux
[target.'cfg(target_os = "macos")'.dependencies]
bliss-audio-aubio-rs = { version = "0.2.4", features = ["static", "bindgen"] }

[dev-dependencies]
ndarray-npy = { version = "0.9.1", default-features = false }
adler32 = { version = "1.2.0", default-features = false }
pretty_assertions = { workspace = true }
rstest = { workspace = true }
criterion = { workspace = true }

[lib]
bench = false

[[bench]]
name = "analysis"
harness = false

[[bench]]
name = "chroma"
harness = false

[[bench]]
name = "decoder"
harness = false

[[bench]]
name = "decoder_steps"
harness = false

[[bench]]
name = "descriptors"
harness = false

[[bench]]
name = "utils"
harness = false
