[package]
name = "mecomp-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "CLI frontend for the MECOMP music player daemon"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
license.workspace = true

[features]
default = []

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
tarpc = { workspace = true }
tokio = { workspace = true }


# MECOMP dependencies
mecomp-core = { workspace = true, features = ["rpc"] }
mecomp-storage = { workspace = true, features = ["serde"] }
one-or-many = { workspace = true }
mecomp-workspace-hack = { version = "0.1", path = "../mecomp-workspace-hack" }
