[package]
name = "mecomp-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "CLI frontend for the MECOMP music player daemon"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
license.workspace = true

[[bin]]
name = "mecomp-cli"
bench = false
doctest = false


[features]
default = []

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
tarpc = { workspace = true }
tokio = { workspace = true }


# MECOMP dependencies
mecomp-core = { workspace = true, features = ["rpc"] }
mecomp-storage = { workspace = true, features = ["serde", "analysis"] }
one-or-many = { workspace = true }
mecomp-workspace-hack = { version = "0.1", path = "../mecomp-workspace-hack" }

[dev-dependencies]
insta = { version = "1.42", default-features = false }
pretty_assertions = { workspace = true }
mecomp-core = { workspace = true, features = ["rpc", "mock_playback"] }
mecomp-storage = { workspace = true, features = [
    "serde",
    "db",
    "analysis",
    "test_utils",
] }
surrealdb = { workspace = true }
rstest = { workspace = true }
tempfile = { workspace = true }
mecomp-daemon = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
