[package]
name = "mecomp-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "CLI frontend for the MECOMP music player daemon"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
license.workspace = true

[package.metadata.wix]
upgrade-guid = "E61F1B2A-827C-4648-B446-00B5F3125FAF"
path-guid = "2CD134C8-3E43-47F8-853E-41F481EA794D"
license = false
eula = false

[[bin]]
name = "mecomp-cli"
bench = false
doctest = false


[features]
default = []

[dependencies]
clap = { workspace = true }
clap_complete = { workspace = true }
anyhow = { workspace = true }
tarpc = { workspace = true }
tokio = { workspace = true }


# MECOMP dependencies
mecomp-core = { workspace = true, features = ["rpc"] }
mecomp-storage = { workspace = true, features = ["serde", "analysis"] }
mecomp-workspace-hack = { version = "0.1", path = "../mecomp-workspace-hack" }

[dev-dependencies]
insta = { version = "1.44.1", default-features = false }
pretty_assertions = { workspace = true }
mecomp-core = { workspace = true, features = ["rpc", "mock_playback"] }
mecomp-storage = { workspace = true, features = [
    "serde",
    "db",
    "analysis",
    "test_utils",
] }
surrealdb = { workspace = true }
rstest = { workspace = true }
tempfile = { workspace = true }
mecomp-daemon = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
