[package]
name = "mecomp-daemon"
description = "The RPC daemon for the mecomp music player, contains client library and server executable."
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "mecomp-daemon"
test = false
bench = false
doctest = false

[features]
default = ["cli", "dynamic_updates", "analysis"]
cli = ["dep:clap"]                                            # features needed for the CLI (binary crate)
otel_tracing = ["mecomp-core/otel_tracing"]
flame = ["mecomp-core/flame"]
dynamic_updates = ["dep:notify-debouncer-full", "dep:notify"]
analysis = ["mecomp-storage/analysis"]

[dependencies]
# shared dependencies
anyhow = { workspace = true }
clap = { workspace = true, optional = true }
futures = { workspace = true }
log = { workspace = true }
notify = { workspace = true, optional = true }
notify-debouncer-full = { workspace = true, optional = true }
rand = { workspace = true }
serde = { workspace = true }
surrealdb = { workspace = true }
tap = { workspace = true }
tarpc = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing = { workspace = true }
walkdir = { workspace = true }

# MECOMP dependencies
mecomp-core = { workspace = true, features = ["rpc"] }
mecomp-storage = { workspace = true, features = ["serde", "db"] }
one-or-many = { workspace = true }

# server dependencies
config = { version = "0.14.0", default-features = false, features = ["toml"] }
shellexpand = "3.1"
mecomp-workspace-hack = { version = "0.1", path = "../mecomp-workspace-hack" }

[dev-dependencies]
tempfile = { workspace = true }
mecomp-core = { workspace = true, features = ["rpc", "mock_playback"] }
mecomp-storage = { workspace = true, features = ["test_utils"] }
lofty = { workspace = true }
rstest = { workspace = true }
pretty_assertions = { workspace = true }
